# y2b

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml  test.py
data/: state.db
docs/: python-cli-redesign-plan.md
src/: bootstrap.py  cli.py  logger.py  scheduler.py  state.py
src/config/: config.py  config.yaml
src/infra/: ai_client.py  biliup.py  cli_path.py  ffmpeg.py  youtube_api.py  yt_dlp.py
src/service/: downloader.py  monitor.py  pipeline.py  renderer.py  subtitle.py  translator.py  uploader.py
tests/: test_ai_client.py  test_biliup.py  test_bootstrap.py  test_cli_path.py  test_config.py  test_metadata.py  test_pipeline.py  test_renderer.py  test_state.py  test_subtitle.py  test_uploader.py  test_yt_dlp.py
