[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "y2b"
version = "0.1.0"
description = "Python CLI for translating YouTube subtitles and uploading videos to Bilibili"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"biliup>=1.1.29",
	"openai",
	"pydantic>=2",
	"python-dotenv",
	"pyyaml",
	"rich",
	"quickjs>=1.19.4",
	"yt-dlp>=2025.12.8",
	"yt-dlp-ejs>=0.8.0",
]

[project.scripts]
y2b = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.uv.sources]
yt-dlp = { git = "https://github.com/yt-dlp/yt-dlp.git" }

[dependency-groups]
dev = [
	"pytest>=8",
]
